@@ -173,7 +173,7 @@ public class NeverLoggedInNotificationStrategy extends AbstractTimedNotification
       if (!isUsableStudyStartDate(studyStartDate)) {
         continue;
       }
-      Long userEntityId = new Long((int) result.get("userEntityId"));
+      Long userEntityId = Long.valueOf((int) result.get("userEntityId"));
       UserEntity studentEntity = userEntityController.findUserEntityById(userEntityId);
       if (studentEntity == null) {
         continue;
